--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -319,7 +319,7 @@
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button
-              class="nav-link active"
+              class="nav-link active "
               id="pills-home-tab"
               data-bs-toggle="pill"
               data-bs-target="#pills-home"
@@ -501,6 +501,37 @@
           </div>
         </div>
       </section>
+
+      <!-- Contact -->
+
+      <section id="contact" class="container bg-light p-3">
+        <h2 class="display-6 text-danger">Contact</h2>
+        <article>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, a? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis delectus expedita accusamus magni dignissimos commodi.</p>
+          <div class="row">
+            <div class="col-md-4">
+              <i class="fas fa-phone fa-2x text-danger"></i>
+              <h5>Telephone</h5>
+              <a href="tel:+417772222222">+417772222222</a>
+            </div>
+            <div class="col-md-4">
+              <i class="fab fa-whatsapp fa-2x text-danger"></i>
+              <h5>Whatsapp</h5>
+              <a href="https://wa.me/+417772222222">+417772222222</a>
+            </div>            <div class="col-md-4">
+              <i class="fas fa-envelope fa-2x text-danger"></i>
+              <h5>Telephone</h5>
+              <a href="mailto:info@clarusway.com">info@clarusway.com</a>
+            </div>
+
+
+          </div>
+        </article>
+
+
+      </section>
+
+
     </main>
 
     <script src="lib/fslightbox.js"></script>
