--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -319,7 +319,7 @@
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button
-              class="nav-link active "
+              class="nav-link active"
               id="pills-home-tab"
               data-bs-toggle="pill"
               data-bs-target="#pills-home"
@@ -414,44 +414,44 @@
             aria-labelledby="pills-profile-tab"
             tabindex="0"
           >
-          <div class="row g-2">
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ds1.jpg">
-                <img
-                  src="img/thumbnail/ds1.jpg"
-                  class="img-thumbnail"
-                  alt="ds1"
-                />
-              </a>
+            <div class="row g-2">
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ds1.jpg">
+                  <img
+                    src="img/thumbnail/ds1.jpg"
+                    class="img-thumbnail"
+                    alt="ds1"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ds2.jpg">
+                  <img
+                    src="img/thumbnail/ds2.jpg"
+                    class="img-thumbnail"
+                    alt="ds2"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ds3.jpg">
+                  <img
+                    src="img/thumbnail/ds3.jpg"
+                    class="img-thumbnail"
+                    alt="ds3"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ds4.jpg">
+                  <img
+                    src="img/thumbnail/ds4.jpg"
+                    class="img-thumbnail"
+                    alt="ds4"
+                  />
+                </a>
+              </div>
             </div>
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ds2.jpg">
-                <img
-                  src="img/thumbnail/ds2.jpg"
-                  class="img-thumbnail"
-                  alt="ds2"
-                />
-              </a>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ds3.jpg">
-                <img
-                  src="img/thumbnail/ds3.jpg"
-                  class="img-thumbnail"
-                  alt="ds3"
-                />
-              </a>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ds4.jpg">
-                <img
-                  src="img/thumbnail/ds4.jpg"
-                  class="img-thumbnail"
-                  alt="ds4"
-                />
-              </a>
-            </div>
-          </div>
           </div>
           <div
             class="tab-pane fade"
@@ -460,44 +460,44 @@
             aria-labelledby="pills-contact-tab"
             tabindex="0"
           >
-          <div class="row g-2">
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ops1.jpg">
-                <img
-                  src="img/thumbnail/ops1.jpg"
-                  class="img-thumbnail"
-                  alt="ops1"
-                />
-              </a>
+            <div class="row g-2">
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ops1.jpg">
+                  <img
+                    src="img/thumbnail/ops1.jpg"
+                    class="img-thumbnail"
+                    alt="ops1"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ops2.jpg">
+                  <img
+                    src="img/thumbnail/ops2.jpg"
+                    class="img-thumbnail"
+                    alt="ops2"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ops3.jpg">
+                  <img
+                    src="img/thumbnail/ops3.jpg"
+                    class="img-thumbnail"
+                    alt="ops3"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/ops4.jpg">
+                  <img
+                    src="img/thumbnail/ops4.jpg"
+                    class="img-thumbnail"
+                    alt="ops4"
+                  />
+                </a>
+              </div>
             </div>
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ops2.jpg">
-                <img
-                  src="img/thumbnail/ops2.jpg"
-                  class="img-thumbnail"
-                  alt="ops2"
-                />
-              </a>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ops3.jpg">
-                <img
-                  src="img/thumbnail/ops3.jpg"
-                  class="img-thumbnail"
-                  alt="ops3"
-                />
-              </a>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <a data-fslightbox href="img/thumbnail/ops4.jpg">
-                <img
-                  src="img/thumbnail/ops4.jpg"
-                  class="img-thumbnail"
-                  alt="ops4"
-                />
-              </a>
-            </div>
-          </div>
           </div>
         </div>
       </section>
@@ -507,8 +507,12 @@
       <section id="contact" class="container bg-light p-3">
         <h2 class="display-6 text-danger">Contact</h2>
         <article>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, a? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis delectus expedita accusamus magni dignissimos commodi.</p>
-          <div class="row">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, a?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis
+            delectus expedita accusamus magni dignissimos commodi.
+          </p>
+          <div class="row g-3">
             <div class="col-md-4">
               <i class="fas fa-phone fa-2x text-danger"></i>
               <h5>Telephone</h5>
@@ -518,20 +522,58 @@
               <i class="fab fa-whatsapp fa-2x text-danger"></i>
               <h5>Whatsapp</h5>
               <a href="https://wa.me/+417772222222">+417772222222</a>
-            </div>            <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
               <i class="fas fa-envelope fa-2x text-danger"></i>
               <h5>Telephone</h5>
               <a href="mailto:info@clarusway.com">info@clarusway.com</a>
             </div>
-
-
           </div>
+          <form class="row g-3">
+            <div class="col-md-6">
+              <label for="inputEmail4" class="form-label">Email</label>
+              <input type="email" class="form-control" id="inputEmail4" />
+            </div>
+            <div class="col-md-6">
+              <label for="inputPassword4" class="form-label">Password</label>
+              <input type="password" class="form-control" id="inputPassword4" />
+            </div>
+            <div class="col-12">
+              <label for="inputAddress" class="form-label">Address</label>
+              <input
+                type="text"
+                class="form-control"
+                id="inputAddress"
+                placeholder="1234 Main St"
+              />
+            </div>
+            <div class="col-12">
+              <label for="inputAddress2" class="form-label">Address 2</label>
+              <input
+                type="text"
+                class="form-control"
+                id="inputAddress2"
+                placeholder="Apartment, studio, or floor"
+              />
+            </div>
+            <div class="col-md-6">
+              <label for="inputCity" class="form-label">City</label>
+              <input type="text" class="form-control" id="inputCity" />
+            </div>
+            <div class="col-md-4">
+              <label for="inputState" class="form-label">State</label>
+              <select id="inputState" class="form-select">
+                <option selected>Choose...</option>
+                <option>...</option>
+              </select>
+            </div>
+            <div class="col-md-2">
+              <label for="inputZip" class="form-label">Zip</label>
+              <input type="text" class="form-control" id="inputZip" />
+            </div>
+          </form>
         </article>
-
-
       </section>
-
-
     </main>
 
     <script src="lib/fslightbox.js"></script>
