--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -583,6 +583,23 @@
       </section>
     </main>
 
+    <!-- Footer -->
+    <footer class="bg-dark text-center text-white p-4">
+      <div class="p-3 fa-2x">
+        <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+      </div>
+      <div>
+        &copy
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        Copyright by YasinKereci
+      </div>
+    </footer>
+
     <script src="lib/fslightbox.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
