--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -591,7 +591,7 @@
         <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
       </div>
-      <div>
+      <div class="p-2 h6">
         &copy
         <script>
           document.write(new Date().getFullYear());
